--- a/post15.html
+++ b/post15.html
@@ -81,7 +81,7 @@
 <p>You could generate the "file.zip" from Feprepare web server based on your ligands of interest before using the scripts. Another two files are provided here for free downloading, all the extraction codes are 9999. One is the <a href="https://pan.baidu.com/s/1LKrbaeZv9EWYBAfIdTFXCA/">toppar file</a> which contains all the topology files need for the simulation, the other is the 
     <a href="https://pan.baidu.com/s/1Vdc9l-dYGCEETmye-mKGIg/">parameter patch file</a>
      . <p/>
-            <p>After the three files ready, to use these two scripts, in the complex or solvent directory.<p/>
+            <p>After the three files ready, to use these two scripts, in the complex or solvent directory.(you need to modify the namd path to your NAMD installation location)<p/>
             <pre> $ chmod +x complex-leg-patch.sh
                   $ ./complex-leg-patch.sh
                   </pre> </p>
