--- a/post15.html
+++ b/post15.html
@@ -156,11 +156,11 @@ mv output5 md_forward_modi.namd
 
 ########Running the job#################################
 
-qsub -I -l select=1:ncpus=32:mem=40gb,walltime=10:00:00 -M z5218975@ad.unsw.edu.au -m aeb
+qsub -I -l select=1:ncpus=32:mem=40gb,walltime=10:00:00 -M your_email@.. -m aeb
 cd $PBS_O_WORKDIR
 module load intel/18.0.1.163 openmpi/3.1.2-intel namd/2.13-mpi
 
-export Fuck_NAMD=/apps/namd/2.13-mpi/arch/Linux-x86_64-icc
+export Honey_NAMD=/apps/namd/2.13-mpi/arch/Linux-x86_64-icc   # this need to be modified
 
 ###################################################################
 mpirun --oversubscribe -np 4 $Fuck_NAMD/namd2 +ppn 7 nvt_equil_modi.namd > nvt_equil_modi.out
@@ -250,11 +250,11 @@ mv output5 md_forward_modi.namd
 
 ########Running the job#################################
 
-qsub -I -l select=1:ncpus=32:mem=40gb,walltime=10:00:00 -M z5218975@ad.unsw.edu.au -m aeb
+qsub -I -l select=1:ncpus=32:mem=40gb,walltime=10:00:00 -M your_email@.. -m aeb
 cd $PBS_O_WORKDIR
 module load intel/18.0.1.163 openmpi/3.1.2-intel namd/2.13-mpi
 
-export Fuck_NAMD=/apps/namd/2.13-mpi/arch/Linux-x86_64-icc
+export Honey_NAMD=/apps/namd/2.13-mpi/arch/Linux-x86_64-icc # this need to be modified.
 
 ###################################################################
 mpirun --oversubscribe -np 4 $Fuck_NAMD/namd2 +ppn 7 nvt_equil_modi.namd > nvt_equil_modi.out
