--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <h1>Qute Sun</h1>
-            <span class="subheading">Quantao's personal site to share chemistry knowledge</span>
+            <span class="subheading">Quantao's personal site to share chemistry knowledge, you could also access to this website by just type <a href=" https://qutesun.ml "> qutesun.ml </a> in your browser without the prefix https or www</span>
           </div>
         </div>
       </div>
