--- a/post17.html
+++ b/post17.html
@@ -104,7 +104,7 @@
             <img class="img-fluid" src="img/post17/2.gif" alt="">
             </a></p>
 
-<h2>2. Reversed A-A reaction with an electron-donating Y group. </h2>
+<h2>2. Reversed D-A reaction with an electron-donating Y group. </h2>
             <p>
             <p style="text-align:center;"><a href="#">
             <img class="img-fluid" src="img/post17/3.gif" alt="">
