--- a/post20.html
+++ b/post20.html
@@ -14267,7 +14267,7 @@ a.anchor-link {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p>This notebook is tricky! Make sure you use it inside the github directory like C:\Users\yournamexxxxxx\Desktop\jupyter-demo\ipymol-master.
 The server status should be <a href="http://localhost:8888/tree/ipymol-master">http://localhost:8888/tree/ipymol-master</a></p>
-<p>You should download the github repository to your local laptop, then start the notebook inside the repository. You can do this by starting up a new Anaconda prompt shell, then use cd "C:\Users\yournamexxxxxx\Desktop\jupyter-demo\ipymol-master" to go inside this folder, then type "jupyter notebook" to start the jupyter notebook in a local server mode.</p>
+<p>You should download the github repository https://github.com/cxhernandez/ipymol to your local laptop, then start the notebook inside the repository. You can do this by starting up a new Anaconda prompt shell, then use cd "C:\Users\yournamexxxxxx\Desktop\jupyter-demo\ipymol-master" to go inside this folder, then type "jupyter notebook" to start the jupyter notebook in a local server mode.</p>
 
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
