--- a/post22.html
+++ b/post22.html
@@ -14373,7 +14373,7 @@ a.anchor-link {
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>Now let's try to comment the bioactivity of this certain value of IC50, here I define pIC50 &gt;= 7 good, pIC50 &lt; 5 bad, and 5=&lt;pIC50&lt;7 medium.
+<p>Now let's try to comment the bioactivity of this certain value of IC50, here I define pIC50 &gt;= 6.5 good, pIC50 &lt; 5.7 bad, others as medium.
 下面对该IC50数据进行归类，如果大于6.5(300 nM)，为好，小于等于5.7(2000 nM)为差，二者之间为中</p>
 
 </div>
