--- a/post25.html
+++ b/post25.html
@@ -13077,7 +13077,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>请先下载Desmond 的安装包，上传到google drive</strong> <strong>里面，然后点击分享链接，替换下面的wget</strong></p>
+<p><strong>请先下载Desmond 的安装包，上传到google drive</strong> <strong>里面，然后点击分享链接，替换下面的wget，注意Desmond 对商业用户为付费软件，学术用户请先通过D E Shaw 公司的审核后才可使用</strong></p>
 
 </div>
 </div>
