--- a/post26.html
+++ b/post26.html
@@ -53,7 +53,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/post-bg.jpg')">
+  <header class="masthead" style="background-image: url('img/post26/bg.png')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
