post26 images added

--- a/post26.html
+++ b/post26.html
@@ -82,6 +82,10 @@
               Free energy perturbation, basically, involves one protein target, with a hybridized ligand (merged from a pair of similar ligands of interests), then we calculate the energy difference when gradually turning off the interaction of the first ligand while turning on the interaction of the second.
             </p>
 
+              <p style="text-align:center;"><a href="#">
+            <img class="img-fluid" src="img/post26/ct2.png" alt="">
+            </a></p>
+
              <p>
               There is a detailed workflow, based on NAMD tutorial "A Tutorial on Alchemical Free Energy Perturbation Calculations in NAMD:" from <a href=" http://www.ks.uiuc.edu/Training/Tutorials/ "> Alchemical tutorial from NAMD </a>; and the paper describing Feprepare web server <a href=" https://pubs.acs.org/doi/10.1021/acs.jcim.1c00215 "> J. Chem. Inf. Model. 2021, 61, 9, 4131–4138 </a>
             </p>
@@ -94,6 +98,12 @@
             <p>
               <a href="img/post26/NAMD-FEP-tutorial.pdf">NAMD-FEP-tutorial_from_github_quantaosun.pdf</a>
             </p>
+
+              <p style="text-align:center;"><a href="#">
+            <img class="img-fluid" src="img/post26/ct.png" alt="">
+            </a></p>
+
+            Holiday is approaching, happy holiday !
 
         </div>
       </div>
