--- a/post27.html
+++ b/post27.html
@@ -53,7 +53,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/post26/bg.png')">
+  <header class="masthead" style="background-image: url('img/post27/gromsas.png')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
