--- a/about.html
+++ b/about.html
@@ -71,12 +71,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-       <p>I am currently a PhD student majored in Chemistry, at <a href="https://www.unsw.edu.au/">University of New South Wales,Sydney</a> </p>
           
-          <p>With a master's degree I worked in the new drug development department of a pharmaceutical company based in Shanghai, China, from 2015 to 2017. </p>
-          <p>Then I moved to research equipment sales sector for a while from 2017-2018 in Shandong Province, China.<p/>
-          <p>Since 2018 August, I move to Sydney, Australia, to continue my education,  to pursue a Ph.D. degree in Medicinal Chemistry.<p/>
-          <p>For the future, I am going to  work in the pharmaceutical industry or start as an entrepreneur in the medicinal chemistry related sector</p>
+          <p> Three-year working experiences in the pharmaceutical industry, currently in a medicinal chemistry PhD program</p>
+          <p>Interested in organic synthesis and molecular modelling</p>
 
       </div>
     </div>
